<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_new_goal_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingStart="@dimen/default_padding_margin_xxx"
        android:paddingTop="@dimen/default_padding_margin_x"
        android:paddingEnd="@dimen/default_padding_margin_xxx"
        android:paddingBottom="@dimen/default_padding_margin_x">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_text_what_your_goal"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding_margin"
                app:boxCornerRadiusBottomEnd="0dp"
                app:boxCornerRadiusBottomStart="0dp"
                app:boxCornerRadiusTopEnd="0dp"
                app:boxCornerRadiusTopStart="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_what_your_goal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/view_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_new_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/default_padding_margin_xx"
                android:paddingTop="@dimen/default_padding_margin_x"
                android:paddingEnd="@dimen/default_padding_margin_xx"
                android:paddingBottom="@dimen/default_padding_margin_x"
                app:layout_constraintBottom_toTopOf="@+id/view_unknown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/view_unknown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/default_padding_margin_xxx"
                android:paddingEnd="@dimen/default_padding_margin_xxx"
                app:layout_constraintBottom_toTopOf="@+id/view_bank_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_new_goal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/view_amount"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_padding_margin_x"
                    android:hint="@string/mock_text_amount"
                    app:boxCornerRadiusBottomEnd="0dp"
                    app:boxCornerRadiusBottomStart="0dp"
                    app:boxCornerRadiusTopEnd="0dp"
                    app:boxCornerRadiusTopStart="0dp"
                    app:boxStrokeColor="@color/colorAccent"
                    app:suffixText="@string/mock_text_thb">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/view_select_date"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mock_text_select_date"
                    app:boxCornerRadiusBottomEnd="0dp"
                    app:boxCornerRadiusBottomStart="0dp"
                    app:boxCornerRadiusTopEnd="0dp"
                    app:boxCornerRadiusTopStart="0dp"
                    app:boxStrokeColor="@color/colorAccent"
                    app:endIconMode="dropdown_menu">

                    <AutoCompleteTextView
                        android:id="@+id/tv_select_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_bank_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/default_padding_margin_xxx"
                android:paddingTop="@dimen/default_padding_margin_x"
                android:paddingEnd="@dimen/default_padding_margin_xxx"
                android:paddingBottom="@dimen/default_padding_margin_x"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_unknown">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mock_text_best_offer"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/view_select_account"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mock_text_select_account"
                    app:boxCornerRadiusBottomEnd="0dp"
                    app:boxCornerRadiusBottomStart="0dp"
                    app:boxCornerRadiusTopEnd="0dp"
                    app:boxCornerRadiusTopStart="0dp"
                    app:boxStrokeColor="@color/colorAccent"
                    app:endIconMode="dropdown_menu">

                    <AutoCompleteTextView
                        android:id="@+id/tv_select_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/view_money"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_padding_margin"
                    android:hint="@string/mock_text_money"
                    app:boxCornerRadiusBottomEnd="0dp"
                    app:boxCornerRadiusBottomStart="0dp"
                    app:boxCornerRadiusTopEnd="0dp"
                    app:boxCornerRadiusTopStart="0dp"
                    app:boxStrokeColor="@color/colorAccent"
                    app:suffixText="@string/mock_text_thb_month">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_money"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>