<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/view_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/view_new_goal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_padding_margin"
            android:paddingEnd="@dimen/default_padding_margin" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_goal_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding_margin_x">

            <TextView
                android:id="@+id/tv_goal_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_text_3_goals"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_goal_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_text_all_saving_37500_thb"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tv_goal_count"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_new_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding_margin_x"
        app:layout_constraintBottom_toTopOf="@+id/view_best_offer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_goal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_new_goal"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/mock_text_new_goal"
            android:textAllCaps="false"
            app:icon="@drawable/ic_add_default_24dp"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/view_best_offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_new_goal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding_margin_x"
            android:layout_marginBottom="@dimen/default_padding_margin_x"
            android:text="@string/mock_text_best_offer"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_best_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_padding_margin"
            android:paddingEnd="@dimen/default_padding_margin" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_suggest_for_you"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_best_offer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding_margin_x"
            android:text="@string/mock_text_suggest_for_you"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_suggest_for_you"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_padding_margin"
            android:paddingEnd="@dimen/default_padding_margin" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>